2015-12-16  Jonathan Wakely  <jwakely@redhat.com>

	PR libstdc++/68912
	* include/std/functional (_Bind::operator()): Use lvalue functor to
	deduce return type.
	* testsuite/20_util/bind/68912.cc: New.

	Backport from mainline
	2015-12-02  Jonathan Wakely  <jwakely@redhat.com>

	PR libstdc++/56383
	* testsuite/20_util/enable_shared_from_this/56383.cc: New.
	* include/bits/shared_ptr_base.h (__enable_shared_from_this): Make
	friend declaration match previous declaration of
	__enable_shared_from_this_helper.
	* include/bits/shared_ptr.h (enable_shared_from_this): Likewise.

2015-12-15  Tim Shen  <timshen@google.com>

	Backport from mainline
	2015-12-15  Tim Shen  <timshen@google.com>

	PR libstdc++/68863
	* include/bits/regex_executor.tcc (_Executor::_M_lookahead):
	Copy the captured content for lookahead, so that the backreferences
	inside can refer to them.
	* testsuite/28_regex/algorithms/regex_match/ecma/char/68863.cc:
	New testcase.

2015-10-02  Jonathan Wakely  <jwakely@redhat.com>

	PR libstdc++/65142
	* src/c++11/random.cc (random_device::_M_getval()): Check read result
	and retry after short reads.

2015-09-03  Jonathan Wakely  <jwakely@redhat.com>

	Backport from mainline
	2015-04-27  Dmitry Prokoptsev  <dprokoptsev@gmail.com>
		    Michael Hanselmann  <public@hansmi.ch>

	PR libstdc++/62258
	* libsupc++/eh_ptr.cc (rethrow_exception): Increment count of
	uncaught exceptions.
	* testsuite/18_support/exception_ptr/62258.cc: New.

2015-08-28  Tim Shen  <timshen@google.com>

	Backport from mainline
	2015-08-28  Tim Shen  <timshen@google.com>

	PR libstdc++/67362
	* include/bits/regex_scanner.tcc (_Scanner<>::_M_scan_normal):
	Always returns ordinary char token if the char isn't
	considered a special char.
	* testsuite/28_regex/regression.cc: New test file for collecting
	regression testcases from, typically, bugzilla.

2015-08-05  Tim Shen  <timshen@google.com>

	Backported from mainline
	2015-07-29  Tim Shen  <timshen@google.com>

	PR libstdc++/67015